# snap-rust

./: Cargo.toml  README.md
src/: app.rs  main.rs
src/app/: hotkeys_utils.rs  tool_utils.rs
