[package]
name = "snap_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
eframe = "0.22.0"
egui = { version = "0.22.0", features = ["persistence","serde"] }
egui_extras = {version = "0.22.0", features = ["svg"]}
image = "0.24.7"
imageproc = "0.23.0"
native-dialog = "0.7.0"
rfd = "0.12.1"
screenshots = "0.8.6"
global-hotkey = "0.4.1"
arboard = "3.3.0"
